Updated README Added command line switch to output binary file directly Added install-to-project-repo.py to move jars from lib to local repo Added local repo for jcuda Added copy for dll/so jar creation Added plugin for fat-jar creation Updated pom.xml to reflect changes